# stupid-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Tiltfile  commitlint.config.js  flake.nix  router.yaml  tailwind.config.js  tailwind.css  users.yaml  webauthhn-example.rs
.github/workflows/: check.yaml  release-please.yaml  release.yaml
k8s/: stupid-auth-values.yaml  test-app-values.yaml  values.yaml
src/: main.rs  passwd.rs  tests.rs  users.rs  webauthn.rs
src/routes/: login.rs  mod.rs  tutorial.rs
templates/: _base.html.tera  _macros.html.tera  login.html.tera  tutorial.html.tera
