[package]
name = "stupid-auth"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version ="0.5.0", features=["secrets"]}
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.100"
rand = "0.8.5"
log = "0.4.0"
fern = "0.6.2"
argon2 = "0.5.0"
sha256 = "1.1.4"
once_cell = "1.18.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dev-dependencies]
tl = { version = "0.7.7" }
