[package]
name = "stupid-auth"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["form", "query"] }
axum-extra = { version = "0.10", features = ["cookie-private"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower = "0.5"
http-body-util = "0.1"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
serde_urlencoded = "0.7"
rand = "0.9"
log = "0.4"
fern = "0.7"
argon2 = "0.5"
sha256 = "1"
once_cell = "1"
time = "0.3"

[dev-dependencies]
tl = { version = "0.7" }
